custom/public/assets/css/custom.css
html {
    scroll-padding-top: 50px;
}
[v-cloak] {
    display: none;
}
.ui.container {
    width: 100%;
}
.gotocontrol {
    position: fixed;
    background-color: #33b5e5;
    color: white;
    border-radius: 50%;
    text-align: center;
    width: 30px;
    height: 30px;
    line-height: 30px;
}
.sticky {
    position: sticky;
    top: 0;
    z-index: 1;
    border-right: 1px solid #ccc;
}
.gridjs-wrapper {
    border-color: var(--color-input-border) !important;
}
.gridjs-th, .gridjs-td {
    color: var(--color-text) !important;
    border-color: var(--color-input-border) !important;
    background-color: var(--color-input-background) !important;
    padding: 5px 10px !important;
    width: auto;
}
.gridjs-tbody tr:nth-child(odd) td {
    background-color: var(--color-box-body) !important;
}
.gridjs-tbody tr:nth-child(even) td {
    background-color: var(--color-box-body-highlight) !important;
}
.gridjs-tbody tr:hover td {
    background-color: var(--color-hover-opaque) !important;
}
input.gridjs-input {
    color: var(--color-text);
    background-color: var(--color-input-background) !important;
    border-color: var(--color-input-border) !important;
}

.timeline-reverse {
    display: flex !important;
    flex-direction: column-reverse !important;
}
.timeline-item {
    order: 1;
}
.timeline-item.first {
    order: 2;
}
.close-btn::before {
    content: '×';
    position: absolute;
    margin-top: -15px;
}
th.gridjs-td {
    border: 1px solid #e5e7eb;
    border-top: none;
    user-select: none;
}
th.gridjs-td:last-child {
    border-right: none;
}
th.gridjs-td .gridjs-th-content {
    float: left;
}
td.ellipsis {
    overflow: hidden;
    text-overflow: ellipsis;
}
td.ellipsis-start {
    overflow: hidden;
    text-overflow: ellipsis;
    direction: rtl;
    text-align: left;
}
.tw-ellipsis {
    display: inline-block;
    overflow: hidden;
    text-overflow: ellipsis;
}
.tw-ellipsis-start {
    display: inline-block;
    overflow: hidden;
    text-overflow: ellipsis;
    direction: rtl;
    text-align: left;
}
.overflow-x-auto {
    overflow-x: auto;
}
.number {
    width: 3.5em;
    text-align: right;
    display: inline-block !important;
}
#img-modal.ui.dimmer {
    top: 0 !important;
    left: 0 !important;
    background: rgba(0, 0, 0, 0.8);
}
#img-modal.ui.dimmer.active {
    display: block;
    align-self: center;
    justify-self: center;
    width: 100%;
    height: 100%;
}
#img-modal.ui.dimmer.active img {
    justify-self: center;
    display: block;
}
.render-content li span {
    color: var(--color-primary-contrast);
    padding: 0 4px 2px 4px;
    border-radius: var(--border-radius);
}

